@@ -1,3 +1,7 @@
+2013-11-04  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-24)
+
+	* Bugfix re-enabling the fixing of initial values for state variables
+
 2013-10-30  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-23)
 
 	* Backtransform fixed ODE parameters for the summary
